# partydeck-rs

./: .gitignore  .gitmodules  AGENTS.md  COPYING.md  Cargo.toml  DEV_ENV_SETUP.md  LICENSE  README.md  STEAMDECK_BUILD_FIX.md  STEAMDECK_SOLUTION_TEST.sh  build.sh  build_steamdeck.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game-handler-request.md
res/: PartyDeckKWinLaunch.sh  splitscreen_kwin.js  splitscreen_kwin_vertical.js  wine_disable_hidraw.reg
scripts/: install_steamdeck_deps.sh  install_steamdeck_deps_fixed.sh
src/: game.rs  handler.rs  input.rs  launch.rs  main.rs  paths.rs
src/app/: app.rs  app_light.rs  config.rs  gui_pages.rs  gui_panels.rs  mod.rs
src/util/: filesystem.rs  mod.rs  profiles.rs  sys.rs  updates.rs
